syntax = "proto3";

package simple_merchant;

import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/way11229/simple_merchant";

message LoginUserRequest {
    string email = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "user email",
        required: ["email"],
    }];
    string password = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "user password",
        required: ["password"],
    }];
}

message LoginUserResponse {
    string token = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "access email",
    }];
}